<?xml version="1.0"?>
<package format="2">
  <name>camera_launch</name>
  <version>0.1.0</version>
  <description>Camera launch for ROS Noetic in Docker</description>

  <maintainer email="you@example.com">you</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>topic_tools</depend>

  <exec_depend>usb_cam</exec_depend>
  <exec_depend>openni2_launch</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>

</package>

